--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -450,7 +450,7 @@
         android:layout_marginRight="115dp"
         android:layout_marginBottom="2dp"
         android:visibility="visible"
-        android:onClick="heart"/>
+        android:onClick="heart_add_to_hearted_playlist"/>
 
     <ImageButton
         android:id="@+id/player_hearted_mini"
@@ -461,7 +461,7 @@
         android:layout_marginRight="115dp"
         android:layout_marginBottom="2dp"
         android:visibility="invisible"
-        android:onClick="hearted"/>
+        android:onClick="heart_add_to_hearted_playlist"/>
 
     <ImageButton
         android:id="@+id/player_play_mini"
