--- a/app/src/main/res/layout/player.xml
+++ b/app/src/main/res/layout/player.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="-100dp" />
 
     <ImageButton
-        android:id="@+id/back_2_lib"
+        android:id="@+id/back_to_library"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left|top"
